<?xml version="1.0"?>
<package>
  <name>task_definition_plugins</name>
  <version>0.0.0</version>
  <description>The task_definition_plugins package</description>

  <author email="robert.krug@oru.se">Robert Krug</author>
  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>
  <maintainer email="jens.lundell@oru.se">Jens Lundell</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hiqp_core</build_depend>
  <build_depend>sdf_collision_check</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>grasp_learning</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>grasp_learning</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>hiqp_core</run_depend>
  <run_depend>sdf_collision_check</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <hiqp_core plugin="${prefix}/plugins.xml"/>
  </export>

</package>
