<?xml version="1.0"?>
<package>
  <name>task_dynamic_plugins</name>
  <version>0.0.0</version>
  <description>The task_dynamic_plugins package</description>

  <maintainer email="jens.lundell@oru.se">Jens Lundell</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>hiqp_core</build_depend>
  <build_depend>grasp_learning</build_depend>

  <run_depend>grasp_learning</run_depend>
  <run_depend>hiqp_core</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <hiqp_core plugin="${prefix}/plugins.xml"/>
  </export>
</package>
